<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ra63_2014.pnrs1.rtrk.taskmanager.NewTask"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/editTxtIme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/hintIme"
        android:textAlignment="center"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxtIme"
        android:id="@+id/pickerContainer"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/vremeIsteka"
            android:id="@+id/btnVreme"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/datumIsteka"
            android:id="@+id/btnDatum" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewContainer"
        android:layout_below="@+id/pickerContainer"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/textViewVreme"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/textViewDatum"
            android:textAlignment="center"/>

    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/textViewContainer"
        android:layout_above="@+id/checkBoxContainer"
        android:hint="@string/hintOpis"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/editTxtOpis"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/secondBottomContainer"
        android:id="@+id/checkBoxContainer"
        android:weightSum="6"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/podeseti"
            android:id="@+id/checkboxPodseti"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secondBottomContainer"
        android:layout_above="@+id/bottomContainer"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/redBtn"
            android:backgroundTint="@android:color/holo_red_dark"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/ylwBtn"
            android:backgroundTint="@android:color/holo_orange_light"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/grnBtn"
            android:backgroundTint="@android:color/holo_green_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomContainer"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/btnDodaj"
            android:text="@string/btnDodaj"
            android:textAllCaps="false" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/btnOtkazi"
            android:text="@string/otkazi"
            android:textAllCaps="false" />


    </LinearLayout>


</RelativeLayout>